# bluevoice-takehome

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  test.html
backend/: README.md
backend/src/backend_api/api/: app.py
backend/src/backend_api/api/events/: bus.py
backend/src/backend_api/document_processor/: processor.py
backend/src/backend_api/llm_service/: models.py  service.py
backend/src/backend_api/vector_store/: embeddings.py  store.py
backend/tests/: conftest.py  test_api.py  test_document_processor.py  test_llm_service.py  test_vector_store.py
cli/src/: main.py
